# Voiceagent

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: diagnose.py
src/: main.py
src/agent/: speech_recognition.py  text_to_speech.py  tools.py  voice_agent.py
src/config/: hospital_data.py  settings.py
src/handlers/: appointment_handler.py  general_info.py  patient_queries.py
src/services/: llm_service.py  patient_data_service.py
src/utils/: audio_utils.py  cost_tracker.py  echo_canceller.py
tests/: test_handlers.py  test_voice_agent.py
